--- a/work-styles.css
+++ b/work-styles.css
@@ -34,23 +34,101 @@ body * {
 }
 
 .main-container {
+  height: 80vh;
   width: 80%;
   margin: auto;
   background-color: white;
+  position: relative;
+  /* border: 3px dotted red; */
 }
 
 .banner-text {
+  position: relative;
   text-align: center;
-  font-size: small;
-  margin: 20px;
+  font-size: medium;
+  color: rgb(80, 80, 80);
+  margin: 40px;
 }
 
+.container-work {
+  position: relative;
+  margin: auto;
+  color: black;
+  width: 90%;
+  font-size: auto;
+  /* border: 3px solid green; */
+  .text {
+    text-align: left;
+    /* margin: 0 auto; */
+    /* border: 1px solid blue; */
+    p {
+      /* border: 1px solid black; */
+      font-size: small;
+    }
+  }
+  .images {
+    margin: auto;
+    text-align: right;
+    /* border: 1px solid orange; */
+  }
+}
 
+.image-container {
+  position: relative;
+  margin: auto;
+  width: 100px;
+  height: 100px;
+  transform-style: preserve-3d;
+  transform: perspective(1000px) rotateY(0deg);
+  transition: transform 0.7s;
+  /* border: 1px solid orange; */
+}
 
+.image-container span {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  transform: rotateY(calc(var(--i) * 36deg)) translateZ(18vw);
+}
 
+.image-container span img {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+}
+
+.btn-container {
+  position: relative;
+  margin: auto;
+  width: 80%;
+  /* border: 1px solid red; */
+}
+
+.btn {
+  position: absolute;
+  bottom: -200px;
+  padding: 10px 20px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 3px 10px 0 rgba(0,0,0,0.19);
+}
+
+.btn:hover {
+  box-shadow: 0 6px 8px 0 rgba(0,0,0,0.24),0 7px 20px 0 rgba(0,0,0,0.19);
+}
+
+#prev {
+  left: 20%;
+}
+
+#next {
+  right: 20%;
+}
 
 footer {
   background-color: rgba(248, 249, 250, 1);
+  position: absolute;
+  min-height: 10%;
 }
 
 footer p {
