added period to background immage path so it shows in Github pages

--- a/library-styles.css
+++ b/library-styles.css
@@ -78,7 +78,7 @@ body * {
 
 .library-img {
   height: 600px;
-  background-image: url("/img/library/hearst-castle-library.jpg");
+  background-image: url("./img/library/hearst-castle-library.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
