--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ body * {
 }
 
 .lone-oak-img {
-  background-image: url("/img/lone-oak-tree.jpg");
+  background-image: url("./img/lone-oak-tree.jpg");
   filter: brightness(0.90) saturate(0%);
   opacity: 0.1;
 }
