--- a/places-styles.css
+++ b/places-styles.css
@@ -120,12 +120,12 @@ body * {
 
 footer {
   background-color: rgba(248, 249, 250, 1);
-  position: fixed;
-  bottom: 0;
+  position: relative;
 }
 
 footer p {
   padding: 10px;
   padding-top: 20px;
+  margin: 0;
   text-align: center;
 }
