--- a/work-styles.css
+++ b/work-styles.css
@@ -95,7 +95,9 @@ body * {
   position: absolute;
   left: 0;
   top: 0;
+  margin: auto;
   width: 100%;
+  /* border: 1px solid orange; */
 }
 
 .btn-container {
